--- a/manifests/myapp-deployment.yml
+++ b/manifests/myapp-deployment.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: dockerkubapp
-        image: hokipoki123/dockerkub:latest
+        image: hokipoki123/dockerkub:2.0.5
         ports:
         - containerPort: 80
